# handwritten-history-kit

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  package.json  pyproject.toml
docs/: PROBLEM.md
site/: index.html
src/: cli.js  index.js
src/handwritten_history_kit/: __init__.py
tests/: test_smoke.py
