[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "handwritten-history-kit"
version = "2.0.0"
description = "Human-in-the-loop repair queues for historical handwriting and damaged records."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Handwritten History Kit contributors" }]
keywords = ["ai", "agents", "governance", "safety", "open-source"]

[project.scripts]
"handwritten-history-kit" = "handwritten_history_kit.cli:main"

[project.urls]
Homepage = "https://sdevkota.github.io/handwritten-history-kit/"
Repository = "https://github.com/sdevkota/handwritten-history-kit"
Issues = "https://github.com/sdevkota/handwritten-history-kit/issues"

[tool.setuptools.packages.find]
where = ["src"]
